# vulkanuff

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
docs/: 0-cool-resources.md
docs/0-basic-triangle/1-initialization/: 1-overview.md  2-create-instance.md  3-validation-layers-debugging.md  4-physical-devices-n-queue-families.md  5-logical-device-n-queues.md
docs/0-basic-triangle/2-presentation-init/: 1-win-surface.md  2-swap-chain.md  3-image-views.md
docs/0-basic-triangle/3-graphics-pipeline/: 1-basics.md  2-shader-modules.md  3-fixed-function-operations.md  4-render-pass.md  5-creating-pipeline.md
docs/0-basic-triangle/4-drawing/: 1-framebuffers.md  2-command-pools-and-buffers.md  3-rendering-and-presentation.md  4-frames-in-flight.md
docs/0-basic-triangle/5-swap-chain-recreation/: 0-swap-chain-recreation.md
docs/1-vertex-buffers/: 1-vertex-input-description.md  2-vertex-buffer-creation.md  3-staging-buffer.md  4-index-buffer.md
docs/2-uniform-buffers/: 1-descriptor-layout-and-buffer.md  2-descriptor-pool-and-sets.md
essentials/: 0-cool-resources.md
essentials/0-basic-triangle/1-initialization/: 1-overview.md  2-create-instance.md  3-validation-layers-debugging.md  4-physical-devices-n-queues.md
essentials/0-basic-triangle/3-graphics-pipeline/: 4-render-pass.md
essentials/2-uniform-buffers/: 1-descriptor-layout-and-buffer.md
shaders/: compile_shaders.sh  frag.spv  test_fragment_shader.glsl  test_vertex_shader.glsl  vert.spv
src/: main.cpp
src/utils/: helpers.cpp  helpers.h
src/visual/: visual_app.cpp  visual_app.h
(+93 files in other folders)
